--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
     <h1>Student Finance Tracker</h1>
     <nav aria-label="Primary" class="site-nav">
       <ul>
-        <li><a href="#about" class="nav-link" data-route>About</a></li>
         <li><a href="#dashboard" class="nav-link" data-route>Dashboard</a></li>
         <li><a href="#records" class="nav-link" data-route>Records</a></li>
         <li><a href="#add" class="nav-link" data-route>Add/Edit</a></li>
         <li><a href="#settings" class="nav-link" data-route>Settings</a></li>
+        <li><a href="#about" class="nav-link" data-route>About</a></li>
       </ul>
     </nav>
+
+    <!-- Theme toggle at the top for quick access -->
+    <div class="header-actions">
+      <button id="theme-toggle" type="button" aria-pressed="false" title="Toggle dark mode" class="toggle">Switch mode</button>
+    </div>
   </header>
 
   <main id="main" tabindex="-1">
@@ -30,8 +35,8 @@
       <h2>About</h2>
       <p>This app helps students track spending, set caps, and search with <strong>regex</strong>. Built with semantic HTML, mobile-first CSS, and vanilla JS.</p>
       <ul>
-        <li>GitHub: <a href="https://github.com/your-handle" target="_blank" rel="noopener">your-handle</a></li>
-        <li>Email: <a href="mailto:you@example.com">you@example.com</a></li>
+        <li>GitHub: <a href="https://github.com/lisaineza" target="_blank" rel="noopener">lisaineza</a></li>
+        <li>Email: <a href="mailto:l.ineza@alustudent.com">l.ineza@alustudent.com</a></li>
       </ul>
     </section>
 
@@ -109,15 +114,15 @@
         <input type="hidden" id="id" />
 
         <div class="field">
-          <label for="date">Date (YYYY-MM-DD)</label>
-          <input id="date" name="date" inputmode="numeric" placeholder="2025-10-15" required />
-          <small class="error" data-err-for="date"></small>
-        </div>
-
-        <div class="field">
           <label for="description">Description</label>
           <input id="description" name="description" placeholder="Lunch at cafeteria" required />
           <small class="error" data-err-for="description"></small>
+        </div>
+
+        <div class="field">
+          <label for="date">Date (YYYY-MM-DD)</label>
+          <input id="date" name="date" type="date" placeholder="2025-10-15" required aria-label="Transaction date" />
+          <small class="error" data-err-for="date"></small>
         </div>
 
         <div class="field">
